Coded HTML for landing page

--- a/index.html
+++ b/index.html
@@ -12,15 +12,214 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Catamaran:wght@500;700&family=Fredoka+One&family=Nunito&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Catamaran:wght@500;600;700&family=Fredoka+One&family=Nunito&display=swap"
       rel="stylesheet"
     />
     <link href="css/style.css" rel="stylesheet" />
+    <link href="css/media.css" rel="stylesheet" />
+    <script
+      src="https://kit.fontawesome.com/9aef28119c.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <h1>The era of robots</h1>
-    <h3>Evolution revolution</h3>
-    <p>The museum will open its doors soon</p>
-    <a href="#" class="cta">view</a>
+    <header>
+      <div>
+        <a href="index.html"
+          ><img
+            alt="Community science museum logo"
+            src="images/logo-mobile.png"
+        /></a>
+      </div>
+      <div>
+        <i class="fas fa-bars"></i>
+      </div>
+    </header>
+    <main>
+      <h1>The era of robots</h1>
+      <div>
+        <i class="fas fa-thumbs-up"></i>
+        <p>7 - 15 years old</p>
+      </div>
+      <div>
+        <i class="fas fa-robot"></i>
+        <p>Robotics & AI</p>
+      </div>
+      <div>
+        <i class="fas fa-calendar-alt"></i>
+        <date>15 Jan - 15 Apr</date>
+      </div>
+      <div>
+        <a class="cta-large" href="#">View</a>
+      </div>
+      <h2>Time to change</h2>
+      <div>
+        <i class="fas fa-thumbs-up"></i>
+        <p>7 - 9 years old</p>
+      </div>
+      <div>
+        <i class="fas fa-globe-americas"></i>
+        <p>Ecology</p>
+      </div>
+      <div>
+        <i class="fas fa-calendar-alt"></i>
+        <date>15 Jan - 15 Dec</date>
+      </div>
+      <div>
+        <a class="cta-small" href="#">View</a>
+      </div>
+      <h2>The sky above us</h2>
+      <div>
+        <i class="fas fa-thumbs-up"></i>
+        <p>10 - 15 years old</p>
+      </div>
+      <div>
+        <i class="fas fa-meteor"></i>
+        <p>Cosmology</p>
+      </div>
+      <div>
+        <i class="fas fa-calendar-alt"></i>
+        <date>15 Jan - 15 Dec</date>
+      </div>
+      <div>
+        <a class="cta-small" href="#">View</a>
+      </div>
+      <h2>Microscopic creatures</h2>
+      <div>
+        <i class="fas fa-thumbs-up"></i>
+        <p>9 - 15 years old</p>
+      </div>
+      <div>
+        <i class="fas fa-microscope"></i>
+        <p>Biology & Medicine</p>
+      </div>
+      <div>
+        <i class="fas fa-calendar-alt"></i>
+        <date>15 Jan - 15 Dec</date>
+      </div>
+      <div>
+        <a class="cta-small" href="#">View</a>
+      </div>
+      <h2>Bones talk</h2>
+      <div>
+        <i class="fas fa-thumbs-up"></i>
+        <p>7 - 10 years old</p>
+      </div>
+      <div>
+        <i class="fas fa-dna"></i>
+        <p>Evolution</p>
+      </div>
+      <div>
+        <i class="fas fa-calendar-alt"></i>
+        <date>15 Jan - 15 Dec</date>
+      </div>
+      <div>
+        <a class="cta-small" href="#">View</a>
+      </div>
+      <section>
+        <h2>Explore</h2>
+        <h3>for children</h3>
+        <img
+          alt="Child having fun with VR glasses"
+          class="image-small"
+          src="images/explore/children.jpg"
+        />
+        <p>
+          Are you a young person looking to learn more about science? Let's
+          learn together
+        </p>
+        <a class="cta-small" href="#">view</a>
+        <h3>for teachers</h3>
+        <img
+          alt="Teacher and students in science class"
+          class="image-small"
+          src="images/explore/teachers.jpg"
+        />
+        <p>
+          We want to work with schools to create places of learning and
+          exploring.
+        </p>
+        <a class="cta-small" href="#">view</a>
+        <h3>for researchers</h3>
+        <img
+          alt="Researcher looking into a microscope"
+          class="image-small"
+          src="images/explore/researchers.jpg"
+        />
+        <p>
+          Are you looking to get involved with our team of researchers and
+          academics? Join us.
+        </p>
+        <a class="cta-small" href="#">view</a>
+      </section>
+      <section>
+        <h2>News</h2>
+        <h3>visiting professor of aeronautics</h3>
+        <p>
+          It is our pleasure to announce that Prof Sheila Widnall from the
+          Massachusetts Institute of Technology will be delivering 3 lectures on
+          the development of aeronautics and where the future lies in this
+          exciting ‘space’.
+        </p>
+        <div>
+          <i class="fas fa-thumbs-up"></i>
+          <p>7 - 10 years old</p>
+        </div>
+        <div>
+          <i class="fas fa-plane-departure"></i>
+          <p>Aeronautics</p>
+        </div>
+        <div>
+          <i class="fas fa-calendar-alt"></i>
+          <date>15 Feb - 18 Feb</date>
+        </div>
+        <div>
+          <a class="cta-small" href="#">book</a>
+        </div>
+        <h3>night in the museum</h3>
+        <p>
+          Get your family together for an exciting night in the museum as you
+          sleep over beside dinosaurs and science displays. Bring your own
+          sleeping bag and get ready to rough it as we go exploring the wonders
+          of science.
+        </p>
+        <div>
+          <i class="fas fa-thumbs-up"></i>
+          <p>Whole family</p>
+        </div>
+        <div>
+          <i class="fas fa-smile-beam"></i>
+          <p>Special event</p>
+        </div>
+        <div>
+          <i class="fas fa-calendar-alt"></i>
+          <date>28 May</date>
+        </div>
+        <div>
+          <a class="cta-small" href="#">book</a>
+        </div>
+        <h3>energetica exhibition on loan</h3>
+        <p>
+          On loan from the NEMO Science Museum in Amsterdam, the Energetica
+          exhibition is a series of installations that allow visitors to
+          experience the power of the elements as we harness them.
+        </p>
+        <div>
+          <i class="fas fa-thumbs-up"></i>
+          <p>5 - 10 years old</p>
+        </div>
+        <div>
+          <i class="fas fa-globe-americas"></i>
+          <p>Ecology</p>
+        </div>
+        <div>
+          <i class="fas fa-calendar-alt"></i>
+          <date>15 Jul - 30 Aug</date>
+        </div>
+        <div>
+          <a class="cta-small" href="#">book</a>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
