Coded HTML for landing page and styled most of it

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       rel="stylesheet"
     />
     <link href="css/style.css" rel="stylesheet" />
+    <link href="css/index.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
     <script
       src="https://kit.fontawesome.com/9aef28119c.js"
@@ -28,6 +29,7 @@
         <a href="index.html"
           ><img
             alt="Community science museum logo"
+            class="logo"
             src="images/logo-mobile.png"
         /></a>
       </div>
@@ -36,145 +38,187 @@
       </div>
     </header>
     <main>
-      <h1>The era of robots</h1>
-      <div>
-        <i class="fas fa-thumbs-up"></i>
-        <p>7 - 15 years old</p>
+      <div class="featured-exhibition">
+        <h1>The era of robots</h1>
+        <div class="featured-exhibition-brief">
+          <div class="exhibition-brief-specs">
+            <i class="fas fa-thumbs-up"></i>
+            <p>7 - 15 years old</p>
+          </div>
+          <div class="exhibition-brief-specs">
+            <i class="fas fa-robot"></i>
+            <p>Robotics & AI</p>
+          </div>
+          <div class="exhibition-brief-specs">
+            <i class="fas fa-calendar-alt"></i>
+            <date>15 Jan - 15 Apr</date>
+          </div>
+        </div>
+        <div>
+          <a class="cta cta-large" href="#">view</a>
+        </div>
       </div>
-      <div>
-        <i class="fas fa-robot"></i>
-        <p>Robotics & AI</p>
+      <div class="exhibition ecology">
+        <h2>Time to change</h2>
       </div>
-      <div>
-        <i class="fas fa-calendar-alt"></i>
-        <date>15 Jan - 15 Apr</date>
+      <div class="exhibition-brief">
+        <div class="exhibition-brief-specs">
+          <i class="fas fa-thumbs-up"></i>
+          <p>7 - 9 years old</p>
+        </div>
+        <div class="exhibition-brief-specs">
+          <i class="fas fa-globe-americas"></i>
+          <p>Ecology</p>
+        </div>
+        <div class="exhibition-brief-specs">
+          <i class="fas fa-calendar-alt"></i>
+          <date>15 Jan - 15 Dec</date>
+        </div>
+        <div>
+          <a class="cta" href="#">view</a>
+        </div>
       </div>
-      <div>
-        <a class="cta-large" href="#">View</a>
+      <div class="exhibition cosmology">
+        <h2>The sky above us</h2>
       </div>
-      <h2>Time to change</h2>
-      <div>
-        <i class="fas fa-thumbs-up"></i>
-        <p>7 - 9 years old</p>
+      <div class="exhibition-brief">
+        <div class="exhibition-brief-specs">
+          <i class="fas fa-thumbs-up"></i>
+          <p>10 - 15 years old</p>
+        </div>
+        <div class="exhibition-brief-specs">
+          <i class="fas fa-meteor"></i>
+          <p>Cosmology</p>
+        </div>
+        <div class="exhibition-brief-specs">
+          <i class="fas fa-calendar-alt"></i>
+          <date>15 Jan - 15 Dec</date>
+        </div>
+        <div>
+          <a class="cta" href="#">view</a>
+        </div>
       </div>
-      <div>
-        <i class="fas fa-globe-americas"></i>
-        <p>Ecology</p>
+      <div class="exhibition bio-and-med">
+        <h2>The micro world</h2>
       </div>
-      <div>
-        <i class="fas fa-calendar-alt"></i>
-        <date>15 Jan - 15 Dec</date>
+      <div class="exhibition-brief">
+        <div class="exhibition-brief-specs">
+          <i class="fas fa-thumbs-up"></i>
+          <p>9 - 15 years old</p>
+        </div>
+        <div class="exhibition-brief-specs">
+          <i class="fas fa-microscope"></i>
+          <p>Biology & Medicine</p>
+        </div>
+        <div class="exhibition-brief-specs">
+          <i class="fas fa-calendar-alt"></i>
+          <date>15 Jan - 15 Dec</date>
+        </div>
+        <div>
+          <a class="cta" href="#">View</a>
+        </div>
       </div>
-      <div>
-        <a class="cta-small" href="#">View</a>
+      <div class="exhibition evolution">
+        <h2>Bones talk</h2>
       </div>
-      <h2>The sky above us</h2>
-      <div>
-        <i class="fas fa-thumbs-up"></i>
-        <p>10 - 15 years old</p>
-      </div>
-      <div>
-        <i class="fas fa-meteor"></i>
-        <p>Cosmology</p>
-      </div>
-      <div>
-        <i class="fas fa-calendar-alt"></i>
-        <date>15 Jan - 15 Dec</date>
-      </div>
-      <div>
-        <a class="cta-small" href="#">View</a>
-      </div>
-      <h2>Microscopic creatures</h2>
-      <div>
-        <i class="fas fa-thumbs-up"></i>
-        <p>9 - 15 years old</p>
-      </div>
-      <div>
-        <i class="fas fa-microscope"></i>
-        <p>Biology & Medicine</p>
-      </div>
-      <div>
-        <i class="fas fa-calendar-alt"></i>
-        <date>15 Jan - 15 Dec</date>
-      </div>
-      <div>
-        <a class="cta-small" href="#">View</a>
-      </div>
-      <h2>Bones talk</h2>
-      <div>
-        <i class="fas fa-thumbs-up"></i>
-        <p>7 - 10 years old</p>
-      </div>
-      <div>
-        <i class="fas fa-dna"></i>
-        <p>Evolution</p>
-      </div>
-      <div>
-        <i class="fas fa-calendar-alt"></i>
-        <date>15 Jan - 15 Dec</date>
-      </div>
-      <div>
-        <a class="cta-small" href="#">View</a>
+      <div class="exhibition-brief">
+        <div class="exhibition-brief-specs">
+          <i class="fas fa-thumbs-up"></i>
+          <p>7 - 10 years old</p>
+        </div>
+        <div class="exhibition-brief-specs">
+          <i class="fas fa-dna"></i>
+          <p>Evolution</p>
+        </div>
+        <div class="exhibition-brief-specs">
+          <i class="fas fa-calendar-alt"></i>
+          <date>15 Jan - 15 Dec</date>
+        </div>
+        <div>
+          <a class="cta" href="#">View</a>
+        </div>
       </div>
       <section>
         <h2>Explore</h2>
         <h3>for children</h3>
-        <img
-          alt="Child having fun with VR glasses"
-          class="image-small"
-          src="images/explore/children.jpg"
-        />
-        <p>
-          Are you a young person looking to learn more about science? Let's
-          learn together
-        </p>
-        <a class="cta-small" href="#">view</a>
+        <div class="explore">
+          <div class="explore-picture">
+            <img
+              alt="Child having fun with VR glasses"
+              class="image-small"
+              src="images/explore/children.jpg"
+            />
+          </div>
+          <div class="explore-brief">
+            <p>
+              Are you a young person looking to learn more about science? Let's
+              learn together
+            </p>
+            <a class="cta" href="#">view</a>
+          </div>
+        </div>
         <h3>for teachers</h3>
-        <img
-          alt="Teacher and students in science class"
-          class="image-small"
-          src="images/explore/teachers.jpg"
-        />
-        <p>
-          We want to work with schools to create places of learning and
-          exploring.
-        </p>
-        <a class="cta-small" href="#">view</a>
+        <div class="explore">
+          <div class="explore-picture">
+            <img
+              alt="Teacher and students in science class"
+              class="image-small"
+              src="images/explore/teachers.jpg"
+            />
+          </div>
+          <div class="explore-brief">
+            <p>
+              We want to work with schools to create places of learning and
+              exploring.
+            </p>
+            <a class="cta" href="#">view</a>
+          </div>
+        </div>
         <h3>for researchers</h3>
-        <img
-          alt="Researcher looking into a microscope"
-          class="image-small"
-          src="images/explore/researchers.jpg"
-        />
-        <p>
-          Are you looking to get involved with our team of researchers and
-          academics? Join us.
-        </p>
-        <a class="cta-small" href="#">view</a>
+        <div class="explore">
+          <div class="explore-picture">
+            <img
+              alt="Researcher looking into a microscope"
+              class="image-small"
+              src="images/explore/researchers.jpg"
+            />
+          </div>
+          <div class="explore-brief">
+            <p>
+              Are you looking to get involved with our team of researchers and
+              academics? Join us.
+            </p>
+            <a class="cta" href="#">view</a>
+          </div>
+        </div>
       </section>
       <section>
         <h2>News</h2>
-        <h3>visiting professor of aeronautics</h3>
-        <p>
-          It is our pleasure to announce that Prof Sheila Widnall from the
-          Massachusetts Institute of Technology will be delivering 3 lectures on
-          the development of aeronautics and where the future lies in this
-          exciting ‘space’.
-        </p>
-        <div>
-          <i class="fas fa-thumbs-up"></i>
-          <p>7 - 10 years old</p>
-        </div>
-        <div>
-          <i class="fas fa-plane-departure"></i>
-          <p>Aeronautics</p>
-        </div>
-        <div>
-          <i class="fas fa-calendar-alt"></i>
-          <date>15 Feb - 18 Feb</date>
-        </div>
-        <div>
-          <a class="cta-small" href="#">book</a>
+        <div class="news">
+          <h3>visiting professor of aeronautics</h3>
+          <p class="news-info">
+            It is our pleasure to announce that Prof Sheila Widnall from the
+            Massachusetts Institute of Technology will be delivering 3 lectures
+            on the development of aeronautics and where the future lies in this
+            exciting ‘space’.
+          </p>
+          <div class="exhibition-brief">
+            <div class="exhibition-brief-specs">
+              <i class="fas fa-thumbs-up"></i>
+              <p>7 - 10 years old</p>
+            </div>
+            <div class="exhibition-brief-specs">
+              <i class="fas fa-plane-departure"></i>
+              <p>Aeronautics</p>
+            </div>
+            <div class="exhibition-brief-specs">
+              <i class="fas fa-calendar-alt"></i>
+              <date>15 Feb - 18 Feb</date>
+            </div>
+          </div>
+          <div>
+            <a class="cta" href="#">book</a>
+          </div>
         </div>
         <h3>night in the museum</h3>
         <p>
@@ -183,20 +227,22 @@
           sleeping bag and get ready to rough it as we go exploring the wonders
           of science.
         </p>
-        <div>
-          <i class="fas fa-thumbs-up"></i>
-          <p>Whole family</p>
+        <div class="exhibition-brief">
+          <div class="exhibition-brief-specs">
+            <i class="fas fa-thumbs-up"></i>
+            <p>Whole family</p>
+          </div>
+          <div class="exhibition-brief-specs">
+            <i class="fas fa-smile-beam"></i>
+            <p>Special event</p>
+          </div>
+          <div class="exhibition-brief-specs">
+            <i class="fas fa-calendar-alt"></i>
+            <date>28 May</date>
+          </div>
         </div>
         <div>
-          <i class="fas fa-smile-beam"></i>
-          <p>Special event</p>
-        </div>
-        <div>
-          <i class="fas fa-calendar-alt"></i>
-          <date>28 May</date>
-        </div>
-        <div>
-          <a class="cta-small" href="#">book</a>
+          <a class="cta" href="#">book</a>
         </div>
         <h3>energetica exhibition on loan</h3>
         <p>
@@ -204,20 +250,22 @@
           exhibition is a series of installations that allow visitors to
           experience the power of the elements as we harness them.
         </p>
-        <div>
-          <i class="fas fa-thumbs-up"></i>
-          <p>5 - 10 years old</p>
+        <div class="exhibition-brief">
+          <div class="exhibition-brief-specs">
+            <i class="fas fa-thumbs-up"></i>
+            <p>5 - 10 years old</p>
+          </div>
+          <div class="exhibition-brief-specs">
+            <i class="fas fa-globe-americas"></i>
+            <p>Ecology</p>
+          </div>
+          <div class="exhibition-brief-specs">
+            <i class="fas fa-calendar-alt"></i>
+            <date>15 Jul - 30 Aug</date>
+          </div>
         </div>
         <div>
-          <i class="fas fa-globe-americas"></i>
-          <p>Ecology</p>
-        </div>
-        <div>
-          <i class="fas fa-calendar-alt"></i>
-          <date>15 Jul - 30 Aug</date>
-        </div>
-        <div>
-          <a class="cta-small" href="#">book</a>
+          <a class="cta" href="#">book</a>
         </div>
       </section>
     </main>
