Fixed news size and colour

--- a/index.html
+++ b/index.html
@@ -41,101 +41,121 @@
       <div class="featured-exhibition">
         <h1>The era of robots</h1>
         <div class="featured-exhibition-brief">
-          <div class="exhibition-brief-specs">
-            <i class="fas fa-thumbs-up"></i>
-            <p>7 - 15 years old</p>
+          <div>
+            <div class="exhibition-brief-specs">
+              <i class="fas fa-thumbs-up"></i>
+              <p>7 - 15 years old</p>
+            </div>
+            <div class="exhibition-brief-specs">
+              <i class="fas fa-robot"></i>
+              <p>Robotics & AI</p>
+            </div>
+            <div class="exhibition-brief-specs">
+              <i class="fas fa-calendar-alt"></i>
+              <date>15 Jan - 15 Apr</date>
+            </div>
           </div>
-          <div class="exhibition-brief-specs">
-            <i class="fas fa-robot"></i>
-            <p>Robotics & AI</p>
+          <div>
+            <div>
+              <a class="cta cta-large" href="#">view</a>
+            </div>
           </div>
-          <div class="exhibition-brief-specs">
-            <i class="fas fa-calendar-alt"></i>
-            <date>15 Jan - 15 Apr</date>
-          </div>
-        </div>
-        <div>
-          <a class="cta cta-large" href="#">view</a>
         </div>
       </div>
       <div class="exhibition ecology">
         <h2>Time to change</h2>
       </div>
       <div class="exhibition-brief">
-        <div class="exhibition-brief-specs">
-          <i class="fas fa-thumbs-up"></i>
-          <p>7 - 9 years old</p>
-        </div>
-        <div class="exhibition-brief-specs">
-          <i class="fas fa-globe-americas"></i>
-          <p>Ecology</p>
-        </div>
-        <div class="exhibition-brief-specs">
-          <i class="fas fa-calendar-alt"></i>
-          <date>15 Jan - 15 Dec</date>
+        <div>
+          <div class="exhibition-brief-specs">
+            <i class="fas fa-thumbs-up"></i>
+            <p>7 - 9 years old</p>
+          </div>
+          <div class="exhibition-brief-specs">
+            <i class="fas fa-globe-americas"></i>
+            <p>Ecology</p>
+          </div>
+          <div class="exhibition-brief-specs">
+            <i class="fas fa-calendar-alt"></i>
+            <date>15 Jan - 15 Dec</date>
+          </div>
         </div>
         <div>
-          <a class="cta" href="#">view</a>
+          <div>
+            <a class="cta" href="#">view</a>
+          </div>
         </div>
       </div>
       <div class="exhibition cosmology">
         <h2>The sky above us</h2>
       </div>
       <div class="exhibition-brief">
-        <div class="exhibition-brief-specs">
-          <i class="fas fa-thumbs-up"></i>
-          <p>10 - 15 years old</p>
-        </div>
-        <div class="exhibition-brief-specs">
-          <i class="fas fa-meteor"></i>
-          <p>Cosmology</p>
-        </div>
-        <div class="exhibition-brief-specs">
-          <i class="fas fa-calendar-alt"></i>
-          <date>15 Jan - 15 Dec</date>
+        <div>
+          <div class="exhibition-brief-specs">
+            <i class="fas fa-thumbs-up"></i>
+            <p>10 - 15 years old</p>
+          </div>
+          <div class="exhibition-brief-specs">
+            <i class="fas fa-meteor"></i>
+            <p>Cosmology</p>
+          </div>
+          <div class="exhibition-brief-specs">
+            <i class="fas fa-calendar-alt"></i>
+            <date>15 Jan - 15 Dec</date>
+          </div>
         </div>
         <div>
-          <a class="cta" href="#">view</a>
+          <div>
+            <a class="cta" href="#">view</a>
+          </div>
         </div>
       </div>
       <div class="exhibition bio-and-med">
         <h2>The micro world</h2>
       </div>
       <div class="exhibition-brief">
-        <div class="exhibition-brief-specs">
-          <i class="fas fa-thumbs-up"></i>
-          <p>9 - 15 years old</p>
-        </div>
-        <div class="exhibition-brief-specs">
-          <i class="fas fa-microscope"></i>
-          <p>Biology & Medicine</p>
-        </div>
-        <div class="exhibition-brief-specs">
-          <i class="fas fa-calendar-alt"></i>
-          <date>15 Jan - 15 Dec</date>
+        <div>
+          <div class="exhibition-brief-specs">
+            <i class="fas fa-thumbs-up"></i>
+            <p>9 - 15 years old</p>
+          </div>
+          <div class="exhibition-brief-specs">
+            <i class="fas fa-microscope"></i>
+            <p>Biology & Medicine</p>
+          </div>
+          <div class="exhibition-brief-specs">
+            <i class="fas fa-calendar-alt"></i>
+            <date>15 Jan - 15 Dec</date>
+          </div>
         </div>
         <div>
-          <a class="cta" href="#">View</a>
+          <div>
+            <a class="cta" href="#">View</a>
+          </div>
         </div>
       </div>
       <div class="exhibition evolution">
         <h2>Bones talk</h2>
       </div>
       <div class="exhibition-brief">
-        <div class="exhibition-brief-specs">
-          <i class="fas fa-thumbs-up"></i>
-          <p>7 - 10 years old</p>
-        </div>
-        <div class="exhibition-brief-specs">
-          <i class="fas fa-dna"></i>
-          <p>Evolution</p>
-        </div>
-        <div class="exhibition-brief-specs">
-          <i class="fas fa-calendar-alt"></i>
-          <date>15 Jan - 15 Dec</date>
+        <div>
+          <div class="exhibition-brief-specs">
+            <i class="fas fa-thumbs-up"></i>
+            <p>7 - 10 years old</p>
+          </div>
+          <div class="exhibition-brief-specs">
+            <i class="fas fa-dna"></i>
+            <p>Evolution</p>
+          </div>
+          <div class="exhibition-brief-specs">
+            <i class="fas fa-calendar-alt"></i>
+            <date>15 Jan - 15 Dec</date>
+          </div>
         </div>
         <div>
-          <a class="cta" href="#">View</a>
+          <div>
+            <a class="cta" href="#">View</a>
+          </div>
         </div>
       </div>
       <section>
@@ -202,7 +222,7 @@
             on the development of aeronautics and where the future lies in this
             exciting ‘space’.
           </p>
-          <div class="exhibition-brief">
+          <div class="exhibition-brief news-brief">
             <div class="exhibition-brief-specs">
               <i class="fas fa-thumbs-up"></i>
               <p>7 - 10 years old</p>
@@ -216,56 +236,47 @@
               <date>15 Feb - 18 Feb</date>
             </div>
           </div>
-          <div>
-            <a class="cta" href="#">book</a>
+          <h3>night in the museum</h3>
+          <p class="news-info">
+            Get your family together for an exciting night in the museum as you
+            sleep over beside dinosaurs and science displays. Bring your own
+            sleeping bag and get ready to rough it as we go exploring the
+            wonders of science.
+          </p>
+          <div class="exhibition-brief news-brief">
+            <div class="exhibition-brief-specs">
+              <i class="fas fa-thumbs-up"></i>
+              <p>Whole family</p>
+            </div>
+            <div class="exhibition-brief-specs">
+              <i class="fas fa-smile-beam"></i>
+              <p>Special event</p>
+            </div>
+            <div class="exhibition-brief-specs">
+              <i class="fas fa-calendar-alt"></i>
+              <date>28 May</date>
+            </div>
           </div>
-        </div>
-        <h3>night in the museum</h3>
-        <p>
-          Get your family together for an exciting night in the museum as you
-          sleep over beside dinosaurs and science displays. Bring your own
-          sleeping bag and get ready to rough it as we go exploring the wonders
-          of science.
-        </p>
-        <div class="exhibition-brief">
-          <div class="exhibition-brief-specs">
-            <i class="fas fa-thumbs-up"></i>
-            <p>Whole family</p>
+          <h3>energetica exhibition on loan</h3>
+          <p class="news-info">
+            On loan from the NEMO Science Museum in Amsterdam, the Energetica
+            exhibition is a series of installations that allow visitors to
+            experience the power of the elements as we harness them.
+          </p>
+          <div class="exhibition-brief news-brief">
+            <div class="exhibition-brief-specs">
+              <i class="fas fa-thumbs-up"></i>
+              <p>5 - 10 years old</p>
+            </div>
+            <div class="exhibition-brief-specs">
+              <i class="fas fa-globe-americas"></i>
+              <p>Ecology</p>
+            </div>
+            <div class="exhibition-brief-specs">
+              <i class="fas fa-calendar-alt"></i>
+              <date>15 Jul - 30 Aug</date>
+            </div>
           </div>
-          <div class="exhibition-brief-specs">
-            <i class="fas fa-smile-beam"></i>
-            <p>Special event</p>
-          </div>
-          <div class="exhibition-brief-specs">
-            <i class="fas fa-calendar-alt"></i>
-            <date>28 May</date>
-          </div>
-        </div>
-        <div>
-          <a class="cta" href="#">book</a>
-        </div>
-        <h3>energetica exhibition on loan</h3>
-        <p>
-          On loan from the NEMO Science Museum in Amsterdam, the Energetica
-          exhibition is a series of installations that allow visitors to
-          experience the power of the elements as we harness them.
-        </p>
-        <div class="exhibition-brief">
-          <div class="exhibition-brief-specs">
-            <i class="fas fa-thumbs-up"></i>
-            <p>5 - 10 years old</p>
-          </div>
-          <div class="exhibition-brief-specs">
-            <i class="fas fa-globe-americas"></i>
-            <p>Ecology</p>
-          </div>
-          <div class="exhibition-brief-specs">
-            <i class="fas fa-calendar-alt"></i>
-            <date>15 Jul - 30 Aug</date>
-          </div>
-        </div>
-        <div>
-          <a class="cta" href="#">book</a>
         </div>
       </section>
     </main>
