--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
           </div>
           <div>
-            <div>
+            <div class="exhibition-brief-cta">
               <a class="cta cta-large" href="#">view</a>
             </div>
           </div>
@@ -81,7 +81,7 @@
           </div>
         </div>
         <div>
-          <div>
+          <div class="exhibition-brief-cta">
             <a class="cta" href="#">view</a>
           </div>
         </div>
@@ -105,7 +105,7 @@
           </div>
         </div>
         <div>
-          <div>
+          <div class="exhibition-brief-cta">
             <a class="cta" href="#">view</a>
           </div>
         </div>
@@ -129,7 +129,7 @@
           </div>
         </div>
         <div>
-          <div>
+          <div class="exhibition-brief-cta">
             <a class="cta" href="#">View</a>
           </div>
         </div>
@@ -153,7 +153,7 @@
           </div>
         </div>
         <div>
-          <div>
+          <div class="exhibition-brief-cta">
             <a class="cta" href="#">View</a>
           </div>
         </div>
