Started with hamburger menu

--- a/index.html
+++ b/index.html
@@ -25,16 +25,31 @@
   </head>
   <body>
     <header>
+      <a href="index.html"
+        ><img
+          alt="Community science museum logo"
+          class="logo"
+          src="images/logo-mobile.png"
+      /></a>
       <div>
-        <a href="index.html"
-          ><img
-            alt="Community science museum logo"
-            class="logo"
-            src="images/logo-mobile.png"
-        /></a>
-      </div>
-      <div>
-        <i class="fas fa-bars"></i>
+        <label for="hamburger-menu"><i class="fas fa-bars"></i></label>
+        <input type="checkbox" id="hamburger-menu" />
+        <nav>
+          <ul>
+            <li>
+              <a href="#">Plan your visit</a>
+            </li>
+            <li>
+              <a href="#">Get involved</a>
+            </li>
+            <li>
+              <a href="#">About us</a>
+            </li>
+            <li>
+              <a href="#">Contact us</a>
+            </li>
+          </ul>
+        </nav>
       </div>
     </header>
     <main>
